# solana-trading-terminal

./: .env.example  .gitignore  Anchor.toml  COMPLETION_SUMMARY.md  DELIVERABLES.md  DEPLOYMENT.md  FINAL_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REQUIREMENTS.md  SECURITY.md  TEST_COMPLETION_REPORT.md  docker-compose.yml  package.json
app/: .env.example  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
app/src/__tests__/components/: SwapInterface.test.tsx  (+2 more)
app/src/app/: layout.tsx  page.tsx
app/src/components/: ErrorBoundary.tsx
app/src/hooks/: useBalance.ts  useProgram.ts  useSwap.ts  useTransactions.ts
app/src/idl/: trading_platform.json
app/src/styles/: globals.css
app/src/utils/: calculations.ts  constants.ts  format.ts
backend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json
backend/src/: main.ts  websocket.ts
backend/src/services/: price.service.ts  solana.service.ts
backend/src/utils/: logger.ts
docs/: ORIGINAL_SCOPE.md  SECURITY_AUDIT_CHECKLIST.md  TESTING.md  architecture.md  domain-concepts.md  index.md  tutorial-01-setup.md  tutorial-02-first-swap.md
migrations/: 001_create_tables.sql
programs/trading-platform/: Cargo.toml
programs/trading-platform/src/: errors.rs  lib.rs  utils.rs
programs/trading-platform/src/instructions/: add_liquidity.rs  initialize_pool.rs  mod.rs  remove_liquidity.rs  swap.rs
programs/trading-platform/src/state/: mod.rs  pool.rs  user.rs
scripts/: deploy-devnet.sh  initialize-pool.ts  setup.sh
tests/: integration.test.ts
(+13 files in other folders)
