[package]
name = "trading-platform"
version = "0.1.0"
description = "Solana DEX Trading Platform with AMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16"
spl-token = "4.0"
spl-associated-token-account = "2.0"
